--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
 
         <!--- ORM -->
         <dependency>
